k8s-manifest/myapp/for-nginx-ingress-contoller/deployment-and-hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  namespace: default # You can change this to your specific namespace
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: jamaldevsecops/myapp:v1 
        resources:
          requests:
            memory: "16Mi"
            cpu: "50m"
          limits:
            memory: "1Gi"
            cpu: "1"
